--- a/index.html
+++ b/index.html
@@ -2,11 +2,20 @@
 <html>
 <head>
   <title>Dashboard</title>
-  <link rel="stylesheet" type="text/css" href="./style.css"/>\
-  <script href = "./main/js"></script>
+  <link rel="stylesheet" type="text/css" href="./style.css"/>
+  <script type = "text/javascript" src="./main.js"></script>
 </head>
-<body>
-  <h1>Hello World</h1>
+<body onload = "startTime()">
+<div class="jumbotron">
+  <div class = "container">
+
+  </div>
+</div>
+
+<div class = "clock">
+  <div id="time"></div>
+  <div id="date"></div>
+</div>
 
 </body>
 </html>
