--- a/index.html
+++ b/index.html
@@ -8,16 +8,15 @@
 <body onload = "startTime()">
 <div class="jumbotron">
   <div class = "container">
-  
-      <div id ="test"></div>
+    
   </div>
 </div>
 
-<div class = "clock">
-  <div id="time"></div>
-  <div id="date"></div>
-
+<div class = "container">
+  <div class = "clock">
+    <div id="time"></div>
+    <div id="date"></div>
+  </div>
 </div>
-
 </body>
 </html>
