--- a/index.html
+++ b/index.html
@@ -4,13 +4,20 @@
   <title>Dashboard</title>
   <link rel="stylesheet" type="text/css" href="./style.css"/>
   <script type = "text/javascript" src="./main.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 </head>
 <body onload = "startTime()">
+
+  <canvas id="myCanvas" width="900" height="600"></canvas>
+  <script src="./canvas.js"></script>
+
 <div class="jumbotron">
   <div class = "container">
-    
+
   </div>
 </div>
+
+
 
 <div class = "container">
   <div class = "clock">
