--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <link rel="stylesheet" type="text/css" href="./style.css"/>
   <script type = "text/javascript" src="./main.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+
 </head>
 <body onload = "startTime()">
 
@@ -13,10 +14,11 @@
 
 <div class="jumbotron">
   <div class = "container">
-
+    <div id="weather"></div>
+    <script type = "text/javascript" src="./jquery.simpleWeather.js"></script>
+    <script type = "text/javascript" src="./weather.js"></script>
   </div>
 </div>
-
 
 
 <div class = "container">
