--- a/index.html
+++ b/index.html
@@ -19,7 +19,14 @@
   <div class="buffer">
   </div>
   <div class = "container">
-    <div class="card"><h2>Notes...</h2></div>
+    <div class="card">
+      <h2>Notes...</h2>
+      <ul>
+        <li>I love Natalie.</li>
+      </ul>
+
+
+    </div>
     <div class="card"><div id="weather"></div></div>
 
   <!--   <div id="weather"></div> -->
