--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" type="text/css" href="./style.css"/>
   <script type = "text/javascript" src="./main.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-    <!-- reload the page every 5 seconds -->
+    <!-- reload the page every 10 minutes -->
     <meta http-equiv="refresh" content="600"/>
 </head>
 <body onload = "startTime()">
