--- a/index.html
+++ b/index.html
@@ -23,8 +23,10 @@
       <div class="card" id="toDoCard">
         <h2>To Do...</h2>
         <ul>
-          <li>- Corolla oil change</li>
-          <li>- Plants for planter</li>
+          <li>- Call for Green bin</li>
+          <!-- <li></li> -->
+          <!-- <li></li> -->
+          <!-- <li></li> -->
         </ul>
       </div>
       <div class="card" id="weatherCard"><div id="weather"></div></div>
@@ -34,8 +36,8 @@
         <div class="card" id="garbageCard">
           <h3>This week</h3>
           <img src="./recycling.png" width="30px"/>
-          <img src="./trashcan.png" width="30px"/>
-          <img src="./grass.png" width="30px"/>
+          <!-- <img src="./trashcan.png" width="30px"/>
+          <img src="./grass.png" width="30px"/> -->
         </div>
     </div>
     <div class="row">
